--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 
  <head>
      <meta charset="UTF-8">
-     <title> Activity 1: Nasic HTML Bio</title>
+     <title> Activity 1: Basic HTML Bio</title>
      This is my First HTML
  </head>
- <body> This is my body</body>
+
+ <body> 
+     <header>
+         <h1>Student Bio</h1>
+     </header>
+ </body>
+ 
 </hmtl>
