--- a/index.html
+++ b/index.html
@@ -6,8 +6,41 @@
 
  <head>
      <meta charset="UTF-8">
-     <title> Activity 1: Nasic HTML Bio</title>
+     <title> Activity 1: Basic HTML Bio</title>
      This is my First HTML
  </head>
- <body> This is my body</body>
+ <body> 
+     <header>
+         <h1>Student Bio</h1>
+     </header>
+ 
+     <div>
+         <section>
+            <h2>Pia Eulogio</h2> 
+            <img src="https://placehold.it/200x200" alt ="Pia Eulogo">
+         </section>
+     </div>
+     <div>
+         <section>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non dolor vitae velit ornare ullamcorper. Pellentesque ullamcorper auctor pharetra. Donec id turpis elit. Aliquam vel commodo odio. Suspendisse a leo at sem feugiat dapibus vitae non odio. Nullam pulvinar velit enim, in luctus leo fringilla id. Integer posuere ultricies tempus. Curabitur lacinia venenatis odio at molestie. Praesent suscipit ipsum non justo semper, nec ornare quam hendrerit. Curabitur blandit turpis vel orci laoreet, eget interdum tortor sagittis.</p>
+         </section>
+         <section>
+             <p>Nullam facilisis mi diam, eu laoreet orci molestie fermentum. Duis at augue quis justo consequat cursus id a magna. Donec massa risus, cursus nec felis vel, tristique molestie augue. Phasellus tempus fringilla enim, et consectetur enim ultrices et. Nunc venenatis mi a libero sollicitudin rhoncus. Suspendisse congue est eu odio suscipit fringilla laoreet quis dui. In lobortis nulla sit amet velit interdum, vel interdum sapien consectetur. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer aliquet pharetra volutpat.</p>
+         </section>
+     </div>
+     <div>
+         <section>
+             <h2>
+                 Contact Info
+             </h2>
+         </section>
+         <section>
+              <ul>
+                  <li>Email: email@goeshere</li>
+                  <li>Github: smapleName</li>
+                  <li>Portfolio: coming soon</li>
+                </ul>
+         </section>
+     </div>
+</body>
 </hmtl>
