--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      <div>
          <section>
             <h2>Pia Eulogio</h2> 
-            <img src="https://placehold.it/200x200" alt ="Pia Eulogo">
+            <img src=".\Headshot-Pia-029.jpg" alt ="Pia Eulogio" height="30%" width="30%">
          </section>
      </div>
      <div>
@@ -36,9 +36,13 @@
          </section>
          <section>
               <ul>
-                  <li>Email: email@goeshere</li>
-                  <li>Github: smapleName</li>
-                  <li>Portfolio: coming soon</li>
+                  <li>Email: 
+                        <a href="mailto:piaeulogio@gmail.com">piaeulogio@gmail.com</a>
+                    </li>
+                  <li>Github: 
+                      <a href="https://github.com/peulogio">Pia Eulogio</a>
+                    </li>
+                  <li>Portfolio: Coming Soon</li>
                 </ul>
          </section>
      </div>
